syntax = "proto3";

option go_package = "../rpc";

service RaftKV{
    rpc AppendEntries (AppendEntriesArgs) returns (AppendEntriesReply){}
    rpc RequestVote (RequestVoteArgs) returns (RequestVoteReply){}
}

message AppendEntriesArgs{
    int32 term = 1;
    int32 leaderId = 2;
    int32 prevLogTerm = 3;
    int32 leaderCommit = 4;
    repeated logEntry entries = 5;
}

message AppendEntriesReply{
    int32 term = 1;
    bool success = 2;
}

message RequestVoteArgs{
    int32 term = 1;
    int32 candidateId = 2;
    int32 lastLogIndex = 3;
    int32 lastLogTerm = 4;
}

message RequestVoteReply{
    int32 term = 1;
    bool voteGranted = 2;
}

message logEntry{
    string key = 1;
    sint32 value = 2;
}